# league-advisor

./: .env.sample  LICENSE  README.md  pyproject.toml  requirements.md
league_advisor/: data_analy.ipynb  data_analysis.csv  discover.py  input_handler.py  league_advisor.py  league_browser.py  league_scraper.py  match-data-analysis.ipynb  match_data_analysis.py  match_data_scraper.py  ranked_items.py  solo_items.py  test.py
league_advisor/string_assets/: champions.json  champions.py  champs.py  champs_color.py  colors.py  filtered_data.json  filtered_data_extra.json  html.html  items.py  items_color.py  match.json  match_data_analysis.csv  menu_strings.py  string_file.txt
tests/: browser_item_menu.sim.txt  discover.sim.txt  discover_menu_back.sim.txt  flo.py  helper.sim.txt  prowser.sim.txt  prowser_item_class.sim.txt  prowser_menu_back.sim.txt  prowser_menu_quit.sim.txt  test_browser_recieve_champions.py  test_discover.py  test_input_handler.py  test_league_advisor.py  test_league_browser.py  test_league_browser_champion.py  test_league_scraper.py  test_match_data_analysis.py  test_match_scraper.py  test_module_browser_recieve_champions.py  test_module_discover.py  test_module_solo_items.py  test_sim_discover.py  test_sim_input_handler.py  test_sim_league_advisor.py  test_sim_league_browser.py  test_sim_ranked_item.py  test_sim_solo_item.py  test_solo_items.py
tests/simulations/: browser_recieve_champions_info.sim.txt  browser_recieve_champions_start.sim.txt  color_mode.sim.txt  discover_method.sim.txt  discover_method_any_key.txt  discover_method_quit.txt  (+22 more)
