[tool.poetry]
name = "league-advisor"
version = "0.1.0"
description = ""
authors = ["Moha-AlHanbali <Moha.AlHanbali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
black = "^21.10b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
